[package]
name = "msvc-bunny"
version = "0.1.0"
authors = ["Peter Atashian <retep998@gmail.com>"]

[dependencies.winapi]
git = "https://github.com/retep998/winapi-rs"
branch = "dev"
features = ["combaseapi", "minwindef", "oaidl", "objbase", "oleauto", "unknwnbase", "winerror", "winnt", "winreg", "wtypes", "wtypesbase"]
